# minovira

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  minify.rs
tailwind/: input.css  package.json
templates/: note.html  root.html  welcome.html
templates/markdown/: example.md  page2.md  page3.md  page4.md
